# funding-service

./: .awslocal.env  .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .slugingore  .wiz  Dockerfile  Makefile  Procfile  README.md  docker-compose-ci.yml  docker-compose.pullpreview.yml  docker-compose.yml  gunicorn.conf.py  package-lock.json  package.json  project.toml  pyproject.toml  renovate.json  startup.sh  vite.config.js  wsgi.py  wsgi_sso_stub.py  zappa_settings.json
.github/: copilot-instructions.md  pull_request_template.md  setup-pullpreview.sh
.github/instructions/: *.instructions.md
.github/workflows/: ad_hoc_dev_deploy.yml  build_and_test.yml  build_deploy_e2e_pipeline.yml  ci.yml  ci_ecr_deploy.yml  deploy.yml  package.yml  package_push_ci.yml  pullpreview.yml  refresh_seeded_grants.yml  run_db_migrations.yml  run_e2e_tests.yml  run_e2e_tests_docker_compose.yml  terraform_apply.yml  terraform_bootstrap.yml
.github/workflows/run-database-migrations/: action.yml
.pullpreview/: Caddyfile.template  setup-pullpreview.sh
.run/: Template Python tests.run.xml
.zed/: settings.json
app/: __init__.py  bootstrap.py  config.py  constants.py  extensions.py  healthcheck.py  logging.py  metrics.py  monkeypatch.py  sentry.py  types.py
app/access_grant_funding/: forms.py  helpers.py  routes.py
app/access_grant_funding/routes/: __init__.py  award.py  collections.py  misc.py  public_sign_up.py  reports.py  runner.py
app/assets/: _importants.scss  _overrides.scss  _tweaks.scss  admin.js  admin.scss  main.js  main.scss
app/assets/test/: setup.js  test-helpers.js
app/common/: api_routes.py  audit.py  data_table.py  exceptions.py  filters.py  logging.py  markdown.py  qid.py  safe_ids.py  sentry.py  types.py  utils.py
app/common/auth/: __init__.py  authorisation_helper.py  decorators.py  forms.py  sso.py
app/common/collections/: __init__.py  forms.py  preview.py  runner.py  types.py  validation.py
app/common/data/: base.py  models.py  models_audit.py  models_user.py  submission_data_manager.py  types.py  utils.py
app/common/expressions/: __init__.py  custom.py  forms.py  helpers.py  managed.py  references.py  registry.py
app/common/filters/: time_and_date_filters.py
app/common/forms/: __init__.py  collection_schema_service.py  fields.py  form_service.py  helpers.py  question_service.py  validators.py
app/common/helpers/: collections.py  dates.py  feature_flags.py  pdf.py  request_tracing.py  submission_events.py  submission_mode.py  timeline.py  visibility.py
app/common/security/: utils.py
app/config/: __init__.py
app/deliver_grant_funding/: __init__.py  data_sets.py  forms.py  helpers.py  routes.py  session_models.py  types.py
app/deliver_grant_funding/admin/: __init__.py  entities.py  forms.py  mixins.py  views.py
app/deliver_grant_funding/routes/: __init__.py  admin.py  api.py  collections.py  grant_details.py  grant_setup.py  grant_team.py  misc.py  pre_award.py  reports.py  runner.py
app/developers/: __init__.py  access_routes.py  commands.py  deliver_routes.py  forms.py  helpers.py  llm_routes.py  routes.py  seed_realistic_submissions.py
app/developers/data/: 20260226-required-submissions.csv  grants.json  multi-submission-cheeseboards.csv  s151-data.csv
app/extensions/: __init__.py  auto_commit_after_request.py  db_request_session.py  flask_assets_vite.py  record_sqlalchemy_queries.py
app/healthcheck/: __init__.py
app/platform/: __init__.py  forms.py
app/services/: notify.py  s3.py
app/vite/: .nvmrc  main.js  package.json  vite.config.mjs
app/vite/src/: main.js  main.sass
docker-localstack/: setup-awslocal.sh
scripts/: lots-of-curls.sh  ruff-autoformat.sh  run-ad-hoc-task.py  run-migrations-task.py  update-ecs-task-image.py  upgrade-if-different.sh
stubs/sso/: __init__.py  forms.py
terraform/backends/: dev.conf
terraform/bootstrap/: main.tf
tests/: __init__.py  conftest.py  models.py  types.py  utils.py
tests/e2e/: config.py  conftest.py  dataclasses.py  developer_pages.py  helpers.py  pages.py  reports_pages.py  test_create_and_preview_schema.py  test_create_grant.py  test_create_preview_collection.py  test_create_preview_collection.py::test_create_and_preview_report  test_create_view_edit_grant.py  test_developer_journey.py  test_landing_page.py  test_magic_link_auth.py  test_playwright_example.py  test_sso_auth.py  test_start_chrome.py
tests/e2e/access_grant_funding/: pages.py  test_complete_and_submit_report.py  test_cookie_banner.py  test_magic_link_auth.py  test_page_assets.py
tests/e2e/deliver_grant_funding/: helpers.py  pages.py  reports_pages.py  test_add_another.py  test_create_preview_collection.py  test_create_view_edit_grant.py  test_pre_award_validation.py  test_report_with_all_question_types.py  test_report_with_groups.py  test_sso_auth.py  test_upload_data_set.py
tests/fixtures/: e2e-test-file.txt  reference-regex-validation.json  s151-data-sample.csv
tests/integration/: conftest.py  example_models.py  models.py  test_app.py  test_auto_commit_after_request.py  test_cache_control.py  test_example_models.py  test_fixtures.py  test_grants.py  test_handlers.py  test_healthcheck.py  test_logging.py  test_platform_routes.py  utils.py
tests/integration/access_grant_funding/: test_routes.py
tests/integration/common/: test_api_routes.py  test_audit.py  test_filters.py
tests/integration/deliver_grant_funding/: test_data_sets.py  test_forms.py  test_helpers.py  test_routes.py
tests/integration/developers/: test_commands.py  test_deliver_routes.py
tests/integration/extensions/: test_auto_commit_after_request.py  test_flask_assets_vite.py
tests/integration/healthcheck/: test_healthcheck.py
tests/integration/platform/: test_routes.py
tests/unit/: conftest.py  test_all_routes_access.py  test_fixtures.py  test_jinja_templates.py  test_metrics.py  test_sentry.py
tests/unit/common/: test_audit.py  test_data_table.py  test_expressions.py  test_filters.py  (+2 more)
vite/: index.html  package.json  vite.config.mjs
vite/src/: main.sass
(+886 files in other folders)
